[package]
name = "rust-bittorrent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.15"
sha1 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
url = "2.5.4"
rand = "0.9.0"
urlencoding = "2.1.3"
url-builder = "0.1.1"
bytes = "1.10.0"
